# Linkta

./: .gitignore  README.md  pyproject.toml
linkta/: __init__.py  auth.py  models.py  views.py
linkta/static/css/: style.css
linkta/static/js/: main.js
linkta/templates/: base.html
linkta/templates/forms/: login.html  signup.html
linkta/templates/home/: home.html
linkta/templates/includes/: alert.html  nav.html
linkta/templates/profile/: profile.html  profile_edit.html  profile_public.html
